// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<SignupConfirmContainer /> renders a message on success 1`] = `
<SignupConfirmContainer
  confirmAccount={[Function]}
  isFetching={false}
>
  <SignupConfirm
    hasToken={true}
    isFetching={true}
  >
    <div>
      Confirming account...
    </div>
  </SignupConfirm>
</SignupConfirmContainer>
`;

exports[`<SignupConfirmContainer /> renders a message while fetching 1`] = `
<SignupConfirmContainer
  confirmAccount={[Function]}
  isFetching={true}
>
  <SignupConfirm
    hasToken={true}
    isFetching={true}
  >
    <div>
      Confirming account...
    </div>
  </SignupConfirm>
</SignupConfirmContainer>
`;

exports[`<SignupConfirmContainer /> renders a warning on a missing token 1`] = `
<SignupConfirmContainer
  confirmAccount={[Function]}
  isFetching={false}
>
  <SignupConfirm
    hasToken={false}
    isFetching={true}
  >
    <div>
      Could not find a token. Did you use the correct link?
    </div>
  </SignupConfirm>
</SignupConfirmContainer>
`;
